--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <div class="love-letter">
         <p>Sevgilim Ebrar,</p>
         <p>Seninle her geçen gün daha da güzelleşiyor. Senin gülüşün, sesin ve varlığın benim için dünyadaki en değerli şeylerden biri. Kalbim sadece senin için atıyor ve her an seni düşünmek bile beni mutlu ediyor.</p>
-        <p>Hayatımın her anında seninle olmak, seninle yaşlanmak, seninle her anı paylaşmak istiyorum. Senin gözlerin benim cennetim, ellerin en güvenli limanım. Ne olursa olsun, her zaman yanında olacağım ve seni her şeyden çok seveceğim.</p>
-        <p>Seni sonsuz bir aşkla seviyorum, benim güzel meleğim. 💖</p>
+        <p>Seni bu dünyadaki herkesten ve her şeyden çok sevdiğimi sakın ama sakın unutma. Senin gözlerin benim cennetim, ellerin en güvenli limanım. Ne olursa olsun, her zaman yanında olacağım ve seni her şeyden çok seveceğim.</p>
+        <p>Seni sonsuz bir aşkla seviyorum, iyi ki varsın güzeliimm. 💖</p>
     </div>
 
     <!-- 📸 Fotoğraf Bölümü -->
